# TFM_Pokemon

./: .gitignore  .~lock.idees.docx#  CONTEXT.md  README.md  README_1.md  README_2.md  SETUP.md  THESIS_PLAN.md  debug_hang.py  debug_ml_battle.py  debug_ml_ou.py  idees.docx  pyproject.toml  test_results.csv  theory2.txt  verify_agent.py
data/: 1_vs_1_v3_vs_random_922b53fe.csv  1_vs_1_v6_vs_random_4b7cc162.csv  1_vs_1_v6_vs_v1_a51e30fb.csv  2_vs_2_v1_vs_v2_fabbda4c.csv  2_vs_2_v6_vs_random_4d826087.csv  rl_battles_460184.csv  rl_battles_5d5439.csv  tfm_doubles_expert_471c.csv  tfm_doubles_v1_3b84.csv  tfm_doubles_v2_b8b5.csv  tfm_expert_results_5729.csv
data/01/: tfm_doubles_expert_2019.csv  tfm_doubles_expert_7cd9.csv  tfm_doubles_v1_vs_v2_fc58.csv  tfm_results_10k_41ab.csv  tfm_results_10k_718b.csv
data/02/: tfm_doubles_v1_6b50.csv  tfm_doubles_v1_a87e.csv  tfm_expert_singles_v4_4eb9.csv  tfm_expert_singles_v5_ac6f.csv
data/1_vs_1/: 1_vs_1_v1_vs_maxpower.csv  1_vs_1_v2_vs_simpleheur.csv  1_vs_1_v3_vs_simple_heuristic.csv  1_vs_1_v3_vs_v4.csv  1_vs_1_v6_vs_max_power.csv  1_vs_1_v6_vs_random.csv  1_vs_1_v6_vs_self.csv  1_vs_1_v6_vs_simple_heuristic.csv
data/1_vs_1_benchmarks_25_02_26/: 1_vs_1_v1_vs_simple_heuristic.csv  1_vs_1_v1_vs_v1.csv  1_vs_1_v1_vs_v3.csv  1_vs_1_v1_vs_v4.csv  1_vs_1_v1_vs_v6.csv  1_vs_1_v2_vs_simple_heuristic.csv  1_vs_1_v2_vs_v1.csv  1_vs_1_v2_vs_v2.csv  1_vs_1_v2_vs_v3.csv  1_vs_1_v2_vs_v4.csv  1_vs_1_v2_vs_v5.csv  1_vs_1_v2_vs_v6.csv  1_vs_1_v3_vs_max_power.csv  1_vs_1_v3_vs_v1.csv  1_vs_1_v3_vs_v2.csv  1_vs_1_v3_vs_v3.csv  1_vs_1_v3_vs_v5.csv  1_vs_1_v3_vs_v6.csv  1_vs_1_v4_vs_random.csv  1_vs_1_v4_vs_v1.csv  1_vs_1_v4_vs_v6.csv  1_vs_1_v5_vs_v1.csv  1_vs_1_v5_vs_v2.csv  1_vs_1_v5_vs_v4.csv  1_vs_1_v5_vs_v5.csv  1_vs_1_v5_vs_v6.csv  1_vs_1_v6_vs_random.csv  1_vs_1_v6_vs_simple_heuristic.csv  1_vs_1_v6_vs_v5.csv  checkpoint.json
data/2_vs_2/: 2_vs_2_v1_vs_max_power.csv  2_vs_2_v1_vs_v2.csv
data/benchmarks/: 1_vs_1_v1_vs_max_power.csv  1_vs_1_v1_vs_random.csv  1_vs_1_v1_vs_simple_heuristic.csv  1_vs_1_v1_vs_v1.csv  1_vs_1_v1_vs_v2.csv  1_vs_1_v1_vs_v3.csv  1_vs_1_v1_vs_v4.csv  1_vs_1_v1_vs_v5.csv  1_vs_1_v1_vs_v6.csv  1_vs_1_v2_vs_max_power.csv  1_vs_1_v2_vs_random.csv  1_vs_1_v2_vs_simple_heuristic.csv  1_vs_1_v2_vs_v1.csv  1_vs_1_v2_vs_v2.csv  1_vs_1_v2_vs_v3.csv  1_vs_1_v2_vs_v4.csv  1_vs_1_v2_vs_v5.csv  1_vs_1_v2_vs_v6.csv  1_vs_1_v3_vs_max_power.csv  1_vs_1_v3_vs_random.csv  1_vs_1_v3_vs_simple_heuristic.csv  1_vs_1_v3_vs_v1.csv  1_vs_1_v3_vs_v2.csv  1_vs_1_v3_vs_v3.csv  1_vs_1_v3_vs_v4.csv  1_vs_1_v3_vs_v5.csv  1_vs_1_v3_vs_v6.csv  1_vs_1_v4_vs_max_power.csv  1_vs_1_v4_vs_random.csv  1_vs_1_v4_vs_simple_heuristic.csv  1_vs_1_v4_vs_v1.csv  1_vs_1_v4_vs_v2.csv  1_vs_1_v4_vs_v3.csv  1_vs_1_v4_vs_v4.csv  1_vs_1_v4_vs_v5.csv  1_vs_1_v4_vs_v6.csv  1_vs_1_v5_vs_max_power.csv  1_vs_1_v5_vs_random.csv  1_vs_1_v5_vs_simple_heuristic.csv  1_vs_1_v5_vs_v1.csv  (+14 more)
data/benchmarks_doubles_unified/: _tmp_doubles_v1_random_p8001_b1.csv  _tmp_doubles_v1_random_p8002_b2.csv  checkpoint.json  v1_vs_max_power.csv  v1_vs_one_step.csv  v1_vs_random.csv  v1_vs_v2.csv  v1_vs_v6.csv  v1_vs_vgc.csv  v2_vs_v1.csv
data/benchmarks_doubles_v2/: 2_vs_2_v1_vs_max_power.csv  2_vs_2_v1_vs_v2.csv  2_vs_2_v2_vs_max_power.csv  2_vs_2_v2_vs_random.csv  2_vs_2_v2_vs_simple_heuristic.csv  2_vs_2_v6_vs_max_power.csv  checkpoint_v2.json
data/benchmarks_doubles_v3/: 2_vs_2_v6_vs_max_power.csv  2_vs_2_v6_vs_v1.csv  2_vs_2_v6_vs_v2.csv  2_vs_2_v6_vs_v6.csv
data/benchmarks_pokechamp/: checkpoint_pokechamp.json  pokechamp_abyssal_vs_abyssal.csv  pokechamp_abyssal_vs_max_power.csv  pokechamp_abyssal_vs_one_step.csv  pokechamp_abyssal_vs_safe_one_step.csv  pokechamp_abyssal_vs_simple_heuristic.csv  pokechamp_abyssal_vs_v2.csv  pokechamp_abyssal_vs_v6.csv  pokechamp_max_power_vs_abyssal.csv  pokechamp_max_power_vs_one_step.csv  pokechamp_max_power_vs_simple_heuristic.csv  pokechamp_max_power_vs_v1.csv  pokechamp_max_power_vs_v3.csv  pokechamp_max_power_vs_v4.csv  pokechamp_max_power_vs_v6.csv  pokechamp_one_step_vs_abyssal.csv  pokechamp_one_step_vs_max_power.csv  pokechamp_one_step_vs_one_step.csv  pokechamp_one_step_vs_simple_heuristic.csv  pokechamp_one_step_vs_v4.csv  pokechamp_one_step_vs_v5.csv  pokechamp_one_step_vs_v6.csv  pokechamp_random_vs_abyssal.csv  pokechamp_random_vs_random.csv  pokechamp_random_vs_v1.csv  pokechamp_random_vs_v3.csv  pokechamp_random_vs_v4.csv  pokechamp_random_vs_v5.csv  pokechamp_safe_one_step_vs_max_power.csv  pokechamp_safe_one_step_vs_one_step.csv  pokechamp_safe_one_step_vs_safe_one_step.csv  pokechamp_safe_one_step_vs_simple_heuristic.csv  pokechamp_safe_one_step_vs_v1.csv  pokechamp_safe_one_step_vs_v6.csv
data/benchmarks_pokechamp_parallel/: pokechamp_abyssal_vs_v2.csv  pokechamp_abyssal_vs_v4.csv  pokechamp_one_step_vs_one_step.csv  pokechamp_one_step_vs_v6.csv  pokechamp_random_vs_one_step.csv  pokechamp_random_vs_random.csv  pokechamp_random_vs_v2.csv  pokechamp_random_vs_v5.csv  pokechamp_safe_one_step_vs_max_power.csv  pokechamp_safe_one_step_vs_random.csv  pokechamp_safe_one_step_vs_v1.csv  pokechamp_safe_one_step_vs_v5.csv
data/benchmarks_singles_v2/: 1_vs_1_v1_vs_max_power.csv  1_vs_1_v1_vs_v3.csv  1_vs_1_v1_vs_v4.csv  1_vs_1_v3_vs_v3.csv  1_vs_1_v3_vs_v6.csv  1_vs_1_v4_vs_max_power.csv  1_vs_1_v4_vs_v6.csv  1_vs_1_v5_vs_v2.csv  (+4 more)
docs/: MaskablePPO_1.json  MaskablePPO_2 (1).json  comm.txt  development_tools.md  pytorch-cpu-gpu-setup.md  theory2.txt
logs/: benchmark_log.txt  benchmark_log_10k.txt  benchmark_log_1k.txt
report/: bibliography.bib  main.tex
scratch/: audit_gen9_validation.py  calculate_all_elo.py  calculate_all_metrics.py  compile_v12_stats.py  extract_all_code_cells.py  extract_elo_all_gens.py  patch_validation_csvs.py  read_all_elo_summaries.py  read_eda_notebook.py  test_minimax_trace.py  test_v14_tera.py  verify_agent.py  verify_csv_data_accuracy.py
src/: analysis.ipynb  analysis_double.py  analysis_doubles.ipynb  analysis_type_doubles.ipynb  analysis_utils.py  start_sim.sh  type_analysis.py
src/rl/: cuda.txt  (+4 more)
(+2007 files in other folders)
