[project]
name = "tfm"
version = "0.1.0"
description = "Reinforcement learning and heuristic strategies for competitive Pokémon battles using poke-env"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "poke-env>=0.11.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.0",
    "tabulate>=0.9.0",
    "termcolor>=3.3.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
rl = [
    "gymnasium>=0.29.1",
    "sb3-contrib>=2.4.0",
    "stable-baselines3>=2.4.0",
    "torch>=2.5.1",
]
gpu = [
    "gymnasium>=0.29.1",
    "sb3-contrib>=2.4.0",
    "stable-baselines3>=2.4.0",
    "tensorboard>=2.18.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]
pokechamp = [
    "anthropic>=0.84.0",
    "google-genai>=1.65.0",
    "huggingface-hub>=0.28.1",
    "mcp>=1.26.0",
    "ollama>=0.4.7",
    "openai>=2.24.0",
    "orjson>=3.10.15",
    "pyfiglet>=1.0.4",
    "requests>=2.32.3",
    "rich>=14.3.3",
    "termcolor>=2.5.0",
    "torch>=2.5.1",
    "transformers>=4.50.0",
    "websockets>=14.2.0",
]

# PyTorch index: choose per machine (run from project root).
# CPU (other computer):
#   uv lock --index-url https://download.pytorch.org/whl/cpu --extra-index-url https://pypi.org/simple
#   uv sync --all-extras --group dev --index-url https://download.pytorch.org/whl/cpu --extra-index-url https://pypi.org/simple
# GPU (this computer; use cu121 if your CUDA is 12.1):
#   uv lock --index-url https://download.pytorch.org/whl/cu124 --extra-index-url https://pypi.org/simple
#   uv sync --all-extras --group dev --index-url https://download.pytorch.org/whl/cu124 --extra-index-url https://pypi.org/simple

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "ty>=0.0.19",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Select rules:
# E: pycodestyle errors
# F: Pyflakes
# I: isort (import sorting)
# UP: pyupgrade
# B: flake8-bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = []
